story옮기는중입니다.

--- a/WebContent/assets/css/storyList.css
+++ b/WebContent/assets/css/storyList.css
@@ -152,7 +152,7 @@ ul {
   color: #009a3e;
 }
 
-.following {
+.follow.dir.following {
   position: relative;
   height: 56px;
   line-height: 60px;
