--- a/WebContent/assets/css/gosuManage.css
+++ b/WebContent/assets/css/gosuManage.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 * {
   margin: 0;
@@ -9,6 +10,7 @@
 body {
   background-color: #151414;
   color: #bbb;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 a:link {
@@ -210,7 +212,7 @@ a:visited {
 }
 
 .view-wrap {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .user-manage-table {
@@ -268,7 +270,7 @@ td {
 /* search */
 
 .search {
-  margin-top: 20px;
+  margin-bottom: 20px;
   margin-left: 690px;
   position: relative;
   height: 50px;
