식고수신청하는지마는지

--- a/WebContent/assets/css/myPage.css
+++ b/WebContent/assets/css/myPage.css
@@ -309,6 +309,15 @@ li {
   padding: 10px;
 }
 
+.main2>div>p{
+	text-align : center;
+	width: 100%;
+	color : #009a3e;
+	font-size : 16px;
+	font-weight:300;
+	padding:10px;
+}
+
 .main2 a:hover {
   text-decoration: underline;
 }
