--- a/WebContent/assets/css/loading.css
+++ b/WebContent/assets/css/loading.css
@@ -26,7 +26,7 @@ height: 220px;
 
 
 .loading-title {
-font-size: 30px;
+font-size: 35px;
 font-weight: 400;
 line-height: 1.3333333333;
 color: #151B26;
@@ -36,15 +36,17 @@ animation-duration: 1600ms;
 animation-iteration-count: infinite;
 animation-direction: alternate;
 margin-bottom: 20px;
+font-weight:bold;
 }
 
 .progress-bar{
-width: 300px;
+width: 400px;
 height: 12px;
 background-color: #e5eaef;
 border-radius: 100px;
 position: relative;
 overflow: hidden;
+margin-top : 80px;
 }
 
 .progress-bar-gauge{
@@ -56,7 +58,7 @@ height: 12px;
 border-radius: 100px;
 background-color: #13CE66;
 animation-name: loading-bar;
-animation-duration: 1600ms;
+animation-duration: 5500ms;
 animation-iteration-count: infinite;
 animation-timing-function: ease-out;
 }
@@ -83,4 +85,25 @@ animation-timing-function: ease-out;
   width: 100%;
   opacity: 0;
 }
+}
+
+.image-container {
+  width: 200px;
+  height: 200px;
+  overflow: hidden; /* 넘치는 이미지는 자르기 */
+}
+
+.image-container img {
+  width: 100%;
+  height: auto; /* 이미지 비율 유지 */
+}
+
+#plantImage{
+	
+  background-color: whitesmoke;
+  width: 400px;
+  height: 400px;
+  text-align: center;
+  border-radius: 360px;
+  margin-top: 30px;
 }
