--- a/WebContent/assets/css/result.css
+++ b/WebContent/assets/css/result.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@700&family=Gugi&family=Single+Day&display=swap');
-
-
+  @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
 body {
   background-color: rgb(202, 219, 202);
@@ -9,6 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  font-family: 'Cute Font', cursive;
 }
 
 
@@ -36,9 +35,7 @@ div {
   font-size:14px;
   line-height: 25px;
   text-align: left; 
-  margin-left: 10px;
   margin-top: 15px;
-  font-family: 'Gugi', cursive;
 }
 
 .sub-content{
@@ -47,6 +44,7 @@ div {
   line-height: 25px;
   font-family: 'Gugi', cursive;;
   margin-top:10px;
+  margin-left : -10px;
 }
 
 h6{
