--- a/WebContent/assets/css/gosuApplicationBoardRead.css
+++ b/WebContent/assets/css/gosuApplicationBoardRead.css
@@ -271,10 +271,11 @@ body {
 
 .gosu-department-text {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
   margin-right: 20px;
   font-size: 20px;
+  width: 15%;
 }
 
 .gosu-department {
