--- a/WebContent/assets/css/questionList.css
+++ b/WebContent/assets/css/questionList.css
@@ -1,207 +1,159 @@
-@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap");
 
 *{
     margin: 0;
     padding: 0;
-	@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
-	@import url("https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap");
 }
 
-/* 리스트전체 */
- .pcontainer {
-    width: 1200px;
-    height: 1300px;
+body{
+  color: black;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
-/* 00님 환영합니다 */
-
-.plus-top{
-	margin : 28px 0 28px 170px;
-	height : 52px;
+.question-list-body{
+  display: flex;
+  justify-content: center;
 }
 
-.plus-btn {
-	color: #fff;
-    background-color: #009a3e;
-  	border-radius: 5px;
-    text-decoration : none;
-    line-height:52px;
+.gosu-question-list{
+  width: 1200px;
 }
 
-.plust-top > p{
-	font-size : 15px;
+.gosu-info{
+  margin: 25px 50px;
+  color: #808080;
+  font-size: 25px;
 }
 
-/* 소개 */
-.info {
-    margin: 28px 0 0 165px;
+.gosu-info a:visited{
+    text-decoration: none;
+    color:#009a3e;
+}  
+
+.gosu-info a:link {
+  text-decoration: none;
+  color: #009a3e;
 }
 
-.infozone{
-    width: 1160px;
-    height: 80px;
-    margin: 28px 0 10px 0;
-    background-color: #f2f2f2;
-    border-radius: 4px;
-    font-size: 14px;
-    text-align: center;
-    color: #808080;
-    line-height: 100px;
-    position: relative;
-    line-height: 80px;
+.question-tip{
+  background-color: #f2f2f2;
+  color: #808080;
+  margin: 25px 50px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.infozone > img {
-  position: absolute;
-  right: 200px;
-  top: 20px;
+.question-tip p{
+  margin-right: 15px;
+  cursor: pointer;
 }
 
 strong {
   color: #009a3e;
 }
 
-.if {
-    font-weight: 700;
-    color : #222624;
-    font-size: 23px;
+.question-list-box{
+  margin: 25px 50px;
 }
 
-
-/* 질문하기 */
-.question {
-    margin: 50px 23px 0 165px;
+.question-name{
+  margin-bottom: 15px;
 }
 
-.qq{
-    font-weight: 700;
-    color : #222624;
-    font-size: 23px;
-    height: 53px;
+.question-name h3{ 
+  font-weight: 700;
+  color: #222624;
+  font-size: 23px;
 }
 
-.noanswer > button {
-    color: #fff;
-    background-color: #009a3e;
-    width: 80px;
-    height: 33px;
-    border-radius: 4px;
-    border: none;
+.question-button-box{
+  margin-bottom: 30px;
 }
 
-.qh{
-    font-weight: 700;
-    color : #808080;
-    font-size: 50px;
-    position: absolute;
-    left: 10px;
+.question-button-box ul{
+  list-style: none;
+  display: flex;
 }
 
- .answercomp {
-    margin: 7px 0 0 0;
-    position: absolute;
+.question-button-box li{
+  float: left;
 }
 
-	.answercom > button {
-    background-color: #009a3e;
-    color: #fff;
-    width: 80px;
-    height: 33px;
-    border: none;
-    border-radius: 4px;
-}
-
-p {
-    font-size: 20px;
-    color:#808080
-}
-
-.imgz:hover {
-  transform: scale(1,1.1);
-  transition: 0.5s ease-in-out;
-}
-
- .imgz {
- 	width:360px;
- 	height:240px;
-	background-color : black; 
-	margin : 0 40px 0 0;	
- }
- 
- .noanswer{
- 	position:relative;
- }
- 
- .noreply-table,
- .answercom-table{
- 	width:1300px;
- 	height : auto;
- 	display: flex;
- 	flex-flow : row wrap;
- }
- .answercom {
- 	margin : 0 0 0 160px;
- }
- 
- .imti{
- 	margin : 10px 20px 35px 0;
- 	cursor : pointer;
- }
- 
- tbody {
- 	width:1170px;
- 	display:flex;
- 	align-items: center;
- 	white-space: nowrap;
- 	padding : 0;
- 	flex-flow : row wrap;
- }
- 
- .title {
- 	color : #808080;
- 	position : absolute;
- }
-
-
-/* 모달창 */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-  text-align : center;
-}
- 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 30%;
+.no-answer,
+.ok-answer{
+  height: 23px;
+  line-height: 23px;
+  color: white;
+  font-size: 14px;
+  background-color: #009a3e;
   border-radius: 5px;
-}
-
-.modal-content > p {
-  color:#009a3e;
-  font-size : 15px;
-}
- 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
- 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
+  margin-right: 10px;
+  padding: 5px 10px;
   cursor: pointer;
+  border: none;
 }
 
+.question{
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.question-mark-box{
+  height: 55px;
+  width: 55px;
+}
+
+.question-mark-box img{
+  height: 55px;
+  width: 55px;
+  object-fit: cover;
+}
+
+.question-title{
+  width: 50%;
+  color: #3b3b3b;
+
+}
+
+.user-profile-box{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+.question-date{
+  margin-left: 40px;
+}
+
+.user-profile-box img{
+height: 40px;
+width: 40px;
+object-fit: cover;
+border-radius: 50%;
+}
+
+.question-title a:visited,
+.user-nickname-box a:visited{
+  text-decoration: none;
+  color: #3b3b3b;
+}  
+
+.question-title a:link,
+.user-nickname-box a:link {
+text-decoration: none;
+color: #3b3b3b;
+}
+
+.question-title a:hover,
+.user-nickname-box a:hover{
+  color: #009a3e;
+}
