--- a/WebContent/assets/css/userModify.css
+++ b/WebContent/assets/css/userModify.css
@@ -85,6 +85,11 @@ select:focus {
   font-size: 16px;
   width: 195px;
   text-align: center;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn>button:hover{
+	background-color: #02bf4e;
 }
 
 .check-msg{
