--- a/WebContent/assets/css/storyList.css
+++ b/WebContent/assets/css/storyList.css
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1024px;
+  max-width: 1200px;
   padding: 20px;
 }
 
@@ -71,6 +71,7 @@ ul {
   line-height: 57px;
   font-size: 23px;
   font-weight: 700;
+  margin-top: 40px;
 }
 
 /* 스토리 이미지 */
@@ -176,7 +177,7 @@ button {
 
 .coverimg > img {
   width: 100%;
-  height: 255px;
+  height: 330px;
   background-position: center center;
   background-size: cover;
   border-radius: 4px;
@@ -214,7 +215,7 @@ button {
   padding: 10px;
   margin: 0 5px;
   border-radius: 5px;
-  border: 1px solid #333;
+/*   border: 1px solid #333; */
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -225,7 +226,7 @@ button {
 }
 
 .pagination .active {
-  background-color: rgb(255, 87, 87);
+  background-color: #02bf4e;
   border-color: #333;
   color: #fff;
 }
