admin 경로처리 + header css + header 경로처리

--- a/WebContent/assets/css/gosuApplicationBoardList.css
+++ b/WebContent/assets/css/gosuApplicationBoardList.css
@@ -113,6 +113,11 @@ a:visited {
   font-size: 12px;
 }
 
+.writer a:hover{
+  text-decoration: underline;
+  color: #009a3e;
+}
+
 .board-read-all {
   margin-left: 20px;
 }
