--- a/WebContent/assets/css/gosuApplicationBoardRead.css
+++ b/WebContent/assets/css/gosuApplicationBoardRead.css
@@ -284,13 +284,13 @@ body {
   margin: 30px 0;
   border-radius: 10px;
   padding: 30px;
+  align-items: center;
 }
 
 /* 게시글 내용 스타일 */
 .view-content {
-  padding: 10px;
+  padding: 30px;
   margin-bottom: 30px;
-  padding-left: 30px;
   line-height: 1.5;
   font-size: 1rem;
   white-space: pre-line;
