--- a/WebContent/assets/css/result.css
+++ b/WebContent/assets/css/result.css
@@ -29,6 +29,15 @@ body {
   font-size:35px;
 }
 
+.result-profile{
+	width:250px;
+	height:250px;
+	border-radius: 200px;
+	background-color:black;
+	margin-left: 120px;
+	margin-top: 100px;
+}
+
 div {
   font-family: 'Nanum Gothic', sans-serif;
 }
