--- a/WebContent/assets/css/result.css
+++ b/WebContent/assets/css/result.css
@@ -29,13 +29,12 @@ body {
   font-size:35px;
 }
 
-.result-profile{
+.result-profile >img{
 	width:250px;
 	height:250px;
 	border-radius: 200px;
 	background-color:black;
-	margin-left: 120px;
-	margin-top: 100px;
+	margin-top: 70px;
 }
 
 div {
