--- a/WebContent/assets/css/testOne.css
+++ b/WebContent/assets/css/testOne.css
@@ -46,17 +46,13 @@ h1 {
   border: 1px solid #e8e8e8;
   font-size: 1.8em;
   letter-spacing: 0px;
-  padding: 10px 60px;
+  padding: 20px 60px;
   cursor: pointer;
-  display: inline-block;
   margin: 3px 10px;
   width:500px;
 }
 
-.btn:hover {
-  background: rgb(104, 207, 109);
-  color: rgb(6, 184, 62);
-}
+
 
 #my_skill {width: 100%;height: 50px;}
 
@@ -73,3 +69,45 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
 
   width: 70px; position: relative; left:320px;
 }
+
+
+
+.w-btn-outline {
+    position: relative;
+    padding: 15px 30px;
+    border-radius: 15px;
+    font-family: "paybooc-Light", sans-serif;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.25s;
+}
+
+
+.w-btn-green2-outline {
+    border: 3px solid #d9efd7;
+    color: rgb(33, 158, 64);
+    margin-top:30px;
+    width:250px;
+    font-size:16px;
+}
+
+.w-btn-green2-outline:hover {
+	background-color: #d9eddb;
+	color: rgb(33, 158, 64);
+	  width:250px;
+	font-size:16px;
+}
+
+.w-btn-outline:hover {
+    letter-spacing: 2px;
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+
+
+
+
+
+
