--- a/WebContent/assets/css/testOne.css
+++ b/WebContent/assets/css/testOne.css
@@ -88,15 +88,17 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
     border: 3px solid #d9efd7;
     color: rgb(33, 158, 64);
     margin-top:30px;
-    width:250px;
-    font-size:16px;
+    width:300px;
+    font-size:20px;
+    font-weight:bold;
+    text-algin:center;
 }
 
 .w-btn-green2-outline:hover {
 	background-color: #d9eddb;
 	color: rgb(33, 158, 64);
-	  width:250px;
-	font-size:16px;
+	  width:300psx;
+	font-size:20px;
 }
 
 .w-btn-outline:hover {
