--- a/WebContent/assets/css/main2.css
+++ b/WebContent/assets/css/main2.css
@@ -239,6 +239,15 @@ li {
 }
 
 /* 식고수페이지 오른쪽 */
+a.moreGosu{
+ font-size: 20px;
+ font-weight: 500;
+ color: #009a3e;
+ position :absolute;
+ right : 10px;
+ top : -150px;
+}
+
 .main3-right{
   position: relative;
   left: -20px;
