--- a/WebContent/assets/css/start.css
+++ b/WebContent/assets/css/start.css
@@ -12,7 +12,7 @@ body {
   height: 800px;
   text-align: center;
   border-radius: 20px;
-  background-image: url("../../assets/img/algorithm/main2.png");
+  background-image: url("../../assets/img/algorithm/start/main.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
