--- a/WebContent/assets/css/testOne.css
+++ b/WebContent/assets/css/testOne.css
@@ -61,8 +61,9 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
 .btn_result{ background-color: #555; color: #fff;}
 
 .answerContainer{
-  position: relative; 
+  margin-top:120px;
   top: 175px;
+  text-align:center;
 }
 
 .img{
@@ -75,7 +76,7 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
 .w-btn-outline {
     position: relative;
     padding: 15px 30px;
-    border-radius: 15px;
+    border-radius: 10px;
     font-family: "paybooc-Light", sans-serif;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
     text-decoration: none;
@@ -88,17 +89,20 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
     border: 3px solid #d9efd7;
     color: rgb(33, 158, 64);
     margin-top:30px;
-    width:300px;
-    font-size:20px;
+    width:320px;
+    height:70px;
+    font-size:25px;
     font-weight:bold;
-    text-algin:center;
+    background-color:white;
+    
 }
 
 .w-btn-green2-outline:hover {
-	background-color: #d9eddb;
-	color: rgb(33, 158, 64);
-	  width:300psx;
-	font-size:20px;
+    background-color: #e0ede0;
+    color: #46b146;
+    width:320px;
+    height:70px;
+    font-size:22px;
 }
 
 .w-btn-outline:hover {
