--- a/WebContent/assets/css/testOne.css
+++ b/WebContent/assets/css/testOne.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Dongle:wght@700&family=Gugi&family=Single+Day&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Stylish&display=swap');
 body {
   background-color: rgb(202, 219, 202);
+  margin-top:150px;
 }
 
 
@@ -13,8 +14,8 @@ body {
 
 #qna {
   background-color: whitesmoke;
-  width: 800px;
-  height: 800px;
+  width: 900px;
+  height: 600px;
   text-align: center;
   border-radius: 20px;
   background-image: url("../../assets/img/algorithm/testOne/test1.png");
@@ -29,27 +30,31 @@ ul{
 }
 
 li{
-	font-family: 'Black Han Sans', sans-serif;
+	font-family: 'Stylish', sans-serif;
 }
 
 h1 {
   text-align: center;
   position: relative;
   top: 20px;
-  font-size: 55px;
-  font-family: 'Black Han Sans', sans-serif;
+  font-size: 50px;
+  font-family: 'Stylish', sans-serif;
+  font-weight:bold;
 }
 
+
+
 .btn {
-  background-color: #bbe9c2;
+   background-color: rgb(234, 255, 230);
   color: #888888;
   border: 1px solid #e8e8e8;
   font-size: 1.8em;
   letter-spacing: 0px;
-  padding: 20px 60px;
+  padding: 28px 60px;
   cursor: pointer;
-  margin: 3px 10px;
+  margin: 10px 10px;
   width:500px;
+  margin-bottom:20px;
 }
 
 
@@ -64,11 +69,19 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
   margin-top:120px;
   top: 175px;
   text-align:center;
+  
+  }
+  
+  .back{
+  position: relative; 
+  right: 290px; 
+  top: -20px;
+  width: 70px;
 }
 
 .img{
 
-  width: 70px; position: relative; left:320px;
+  width: 70px; position: relative; left:260px;
 }
 
 
@@ -77,38 +90,42 @@ button{ padding: 10px 20px; border-radius:5px; border: 1px solid #888;}
     position: relative;
     padding: 15px 30px;
     border-radius: 10px;
-    font-family: "paybooc-Light", sans-serif;
+    font-family: 'Stylish', sans-serif;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
     text-decoration: none;
     font-weight: 600;
     transition: 0.25s;
+    font-size:27px;
+    
 }
 
 
 .w-btn-green2-outline {
-    border: 3px solid #d9efd7;
-    color: rgb(33, 158, 64);
+    border: 3px solid  #f5f3f0;
+     color: #495d44;
     margin-top:30px;
     width:320px;
     height:70px;
-    font-size:25px;
+    font-size:30px;
     font-weight:bold;
-    background-color:white;
-    
+	background-color: #f5f3f0;
+	margin-top:15px;
 }
 
 .w-btn-green2-outline:hover {
-    background-color: #e0ede0;
+    background-color:  #bee9b5;
     color: #46b146;
     width:320px;
     height:70px;
-    font-size:22px;
+    font-size:30px;
 }
 
 .w-btn-outline:hover {
     letter-spacing: 2px;
     transform: scale(1.1);
     cursor: pointer;
+    background-color:  #bee9b5;
+    border : #bee9b5;
 }
 
 
