페이지들 볕들무렵 로고에 메인페이지 이동 a링크 추가

--- a/WebContent/assets/css/joinOk.css
+++ b/WebContent/assets/css/joinOk.css
@@ -38,6 +38,10 @@
   /* font-family: "SpoqaHanSans-Regular"; */
 }
 
+.logo-link{
+	text-decoration: none;
+}
+
 .logo1{
   display: flex;
   justify-content: center;
