--- a/WebContent/assets/css/join.css
+++ b/WebContent/assets/css/join.css
@@ -39,6 +39,11 @@
   /* font-family: "SpoqaHanSans-Regular"; */
 }
 
+.logo-link{
+	text-decoration: none;
+	display: flex;
+}
+
 .logo{
   display: flex;
   justify-content: center;
@@ -47,7 +52,7 @@
   right: 10px;
 }
 
-.logo>svg{
+svg{
   width: 50px;
   height: 50px;
   fill: #009a3e;
